# DContainers

./: .gitignore  CMakeLists.txt  DArray_8hpp.html  DArray_8hpp.js  DArray_8hpp_source.html  DSpanning_8hpp.html  DSpanning_8hpp_source.html  DVector_8hpp.html  DVector_8hpp.js  DVector_8hpp_source.html  Doxyfile  README.md  README_8md.html  Span_8hpp.html  Span_8hpp_source.html  Spanning_8hpp.html  Spanning_8hpp_source.html  annotated.html  annotated_dup.js  classes.html  classmdc_1_1DArray-members.html  classmdc_1_1DArray.html  classmdc_1_1DArray.js  classmdc_1_1DArray_3_01T_00_01N_01_4-members.html  classmdc_1_1DArray_3_01T_00_01N_01_4.html  classmdc_1_1DArray_3_01T_00_01N_01_4.js  classmdc_1_1DSpanning_3_01SpanSize_1_1All_01_4-members.html  classmdc_1_1DSpanning_3_01SpanSize_1_1All_01_4.html  classmdc_1_1DSpanning_3_01SpanSize_1_1All_01_4.js  classmdc_1_1DSpanning_3_01SpanSize_1_1Index_3_01Value_01_4_01_4-members.html  classmdc_1_1DSpanning_3_01SpanSize_1_1Index_3_01Value_01_4_01_4.html  classmdc_1_1DSpanning_3_01SpanSize_1_1Index_3_01Value_01_4_01_4.js  classmdc_1_1DSpanning_3_01SpanSize_1_1Interval_3_01From_00_01To_01_4_01_4-members.html  classmdc_1_1DSpanning_3_01SpanSize_1_1Interval_3_01From_00_01To_01_4_01_4.html  classmdc_1_1DSpanning_3_01SpanSize_1_1Interval_3_01From_00_01To_01_4_01_4.js  classmdc_1_1DSpanning_3_01SpanSize_1_1Interval_3_01Size_01_4_01_4-members.html  classmdc_1_1DSpanning_3_01SpanSize_1_1Interval_3_01Size_01_4_01_4.html  classmdc_1_1DSpanning_3_01SpanSize_1_1Interval_3_01Size_01_4_01_4.js  classmdc_1_1DVector-members.html  classmdc_1_1DVector.html  (+38 more)
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: cmake-tests.yml  doxygen-gh-pages.yml
cmake/: DContainersConfig.cmake.in  GoogleTest-CMakeLists.txt.in
docs/: Doxyfile  doxygen-theme.css
include/DContainers/: DArray.hpp  DVector.hpp  Span.hpp
include/DContainers/Span/: DSpan.hpp  DSpanning.hpp  Span.hpp  SpanWrapper.hpp  Spanning.hpp
search/: all_0.js  all_1.js  all_2.js  all_3.js  all_4.js  all_5.js  all_7.js  all_8.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  files_0.js  files_2.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  namespaces_0.js  pages_0.js  searchdata.js  typedefs_0.js  variables_0.js  variables_1.js  variables_2.js  variables_3.js
src/: DArray.hpp  DMatrix.hpp  DVector.hpp  InitMatrix.hpp  LiteralDMatrix.hpp  SMatrix.hpp  Span.hpp
src/Span/: DSpan.hpp  Span.hpp  SpanWrapper.hpp
test/: CMakeLists.txt
test/unit/: DArray_tests.cpp  DVector_tests.cpp  Span_tests.cpp
test/unit/Span/: DSpan_tests.cpp  DSpanning_tests.cpp  SpanWrapper_tests.cpp  Span_tests.cpp  Spanning_tests.cpp
tests/: DArray_tests.cpp  DSpan_tests.cpp  DVector_tests.cpp  SpanWrapper_tests.cpp  Span_tests.cpp
tests/Span/: DSpan_tests.cpp  SpanWrapper_tests.cpp  Span_tests.cpp
